fix tooltip overflow
fix owncloud/news#124

--- a/css/bootstrap/tooltip.css
+++ b/css/bootstrap/tooltip.css
@@ -35,7 +35,7 @@
   box-sizing: border-box;
 }
 .tooltip {
-  position: absolute;
+  position: fixed;
   z-index: 1030;
   display: block;
   visibility: visible;
@@ -43,6 +43,8 @@
   line-height: 1.4;
   opacity: 0;
   filter: alpha(opacity=0);
+  white-space: nowrap;
+  overflow: visible;
 }
 .tooltip.in {
   opacity: 0.8;
